@@ -15,7 +15,15 @@
       // update button
       $( "#{{ widget.compound }}__update" ).click( function () {
         var args = new Object();
-        args.uid_list = $( "#{{ widget.full }}__uid_list" ).val();
+        $( "#{{ widget.full }}_form :input" ).each( function() {
+          var id_string = $(this).attr( "id" );
+          var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
+          if( "update" != param_name )
+            args[param_name] = "checkbox" == $(this).attr( "type" )
+                             ? ( $(this).is( ":checked" ) ? 1 : 0 )
+                             : $(this).val();
+        } );
+
         var data = ajax_pull( "participant", "sync", args );
         if( undefined != data ) {
           var html = '<table style="width:34%; margin-left:33%; margin-right:33%">';
@@ -35,9 +43,26 @@
 
         $( "#{{ widget.full }}__proceed" ).click( function () {
           var args = new Object();
-          args.uid_list = $( "#{{ widget.full }}__uid_list" ).val();
+          $( "#{{ widget.full }}_form :input" ).each( function() {
+            var id_string = $(this).attr( "id" );
+            var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
+            if( "update" != param_name )
+              args[param_name] = "checkbox" == $(this).attr( "type" )
+                               ? ( $(this).is( ":checked" ) ? 1 : 0 )
+                               : $(this).val();
+          } );
           if( ajax_push( "participant", "sync", args ) ) slot_prev( {{ slot }} );
         } );
+      } );
+
+      $( "#{{ widget.full }}__start_date" ).datepicker( {
+        dateFormat: 'yy-mm-dd',
+        showAnim: 'slideDown'
+      } );
+
+      $( "#{{ widget.full }}__end_date" ).datepicker( {
+        dateFormat: 'yy-mm-dd',
+        showAnim: 'slideDown'
       } );
     } );
   </script>
@@ -45,7 +70,7 @@
 {% endblock javascript %}
 
 {% block widget %}
-  <div class="ui-widget ui-widget-content app-widget-content">
+  <div id="{{ widget.full }}_form" class="ui-widget ui-widget-content app-widget-content">
     <div class="spacer">
       <p>
         Provide a list of participant UIDs which you wish to sync with Mastodon.
@@ -66,6 +91,30 @@
         </td>
         <td class="content">
           <textarea id="{{ widget.full }}__uid_list" style="height: 16em;"></textarea>
+        </td>
+      </tr>
+      <tr>
+        <td class="heading">
+          <span class="title">Start Date:</span>
+        </td>
+        <td class="content">
+          <input id="{{ widget.full }}__start_date" type="text" style="width:99%" value="" readonly />
+          <div class="help_note">
+            If set then the UID list field is ignored and all participants who were added to the
+            data entry system on or after the given date will be included.
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td class="heading">
+          <span class="title">End Date:</span>
+        </td>
+        <td class="content">
+          <input id="{{ widget.full }}__end_date" type="text" style="width:99%" value="" readonly />
+          <div class="help_note">
+            If set then the UID list field is ignored and all participants who were added to the
+            data entry system on or before the given date will be included.
+          </div>
         </td>
       </tr>
     </table>
