@@ -16,6 +16,9 @@
 * Quotas can now be defined by site as well as region
   - Supervisors now have read-only access to quotas and the quota report
 
+* Participant sync by date
+  - Participants can now be sync based on the date they were added to the data entry system
+
 ====================================================================================================
 1.1.8
 ====================================================================================================
